# dormmon

./: .gitignore  app.py  big_sound_alert.ino  category.py  database.py  database_access.py  database_example.py  event.py  face.py  face_add_event.py  face_encoding.py  items.py  ledger.py  pyproject.toml  recognition.py  response_helpers.py  run.sh  tasks.py  todo.md  user.py
acn_ui/: api.py  ui.py
acn_ui/pages/: balance.py  cleanroom.py  expense.py  face.py  home.py  noise_alert.py  trash.py
arduino/: plot.py
arduino/src/: main.cpp
static/css/: style.css
templates/: base.html  categories.html  events.html  items.html  users.html
templates/dialogs/: add_category.html  add_event.html  add_item.html  add_user.html  cleaning_schedule.html  error.html  pay.html  picture.html  set_stock.html  success.html  task_status.html
