[project]
name = "dormmon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepface>=0.0.95",
    "face-recognition>=1.3.0",
    "flask>=3.1.2",
    "opencv-python>=4.11.0.86",
    "peewee>=3.18.3",
    "tf-keras>=2.20.1",
    "ttkbootstrap>=1.19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
